# bedrock

./: .env.example  .env.production  .gitignore  Dockerfile.backend_frontend  Dockerfile.mongo_db  Makefile  README.md  docker-compose.yml  init-mongo.js  main.py  pyproject.toml
.github/workflows/: docker-image.yml  main.yml
backend/: main.py
backend/core/: base.py  config.py  environment.py  gunicorn_config.py  url.py
backend/database/: connection.py
backend/models/: plans.py
backend/repositories/: plann_repository.py
backend/routes/: auths.py  plans.py
backend/schemas/: plans.py
backend/tests/: test_main.py
backend/utils/: logger.py
frontend/: .env.example  .env.production  .env.staging  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.jsx  index.md  index.tsx
frontend/src/components/: Editor.jsx  Editor.tsx  Form.jsx  Graph.jsx  Graph.tsx  Item.jsx  Item.tsx  List.jsx  Tag.jsx  Tag.tsx
frontend/src/components/Data/: Data.md  Item.tsx  Point.tsx  Tag.tsx
frontend/src/components/Option/: ChartBaseOptions.tsx  Option.md
frontend/src/components/View/: Editor.tsx  Graph.tsx  View.md
frontend/src/components/planForm/: DataForm.jsx  Modifier.jsx  Reader.jsx  Writer.jsx
frontend/src/config/: env.ts  environment.ts
frontend/src/pages/: App.jsx  Bpp.jsx  Login.tsx  Workshop.jsx  Workshop.tsx
frontend/src/services/: Network.jsx  Observer.jsx  Subject.jsx  api.ts
frontend/src/tests/: DummyData.jsx  DummyData.tsx  PlanPoint.jsx
frontend/src/types/: auth.ts
frontend/src/utils/: auth.ts
(+7 files in other folders)
