[tool.poetry]
name = "fastapi-react"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pytest = "^8.3.5"
beanie = "^1.29.0"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
